# ecommerce-search-engine

./: .env.default  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
ecommerce-search-engine/: etl.py  queries.py
legacy_code/: OpenAI_APIs.ipynb  eda-home-depot-data.ipynb  etl.py  queries.py
notebooks/: eda-home-depot-data.ipynb  eda.ipynb  search_engines.ipynb
subprojects/hybrid-search/: pyproject.toml
subprojects/hybrid-search/src/hybrid_search/: __init__.py
subprojects/search-engine-app/: main.py  pyproject.toml
subprojects/search-engine-appi/: main.py  pyproject.toml
tests/: test_cases.json
